--- a/h2.html
+++ b/h2.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Fake Form</title>
+    <title>Auto-submit form</title>
 </head>
 
 <body onload="document.bank_form.submit()">
